--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -1,7 +1,7 @@
 :root {
   --c-base-background: #fff;
   --c-base-background-lighter: #bfc1ca;
-  --c-base-text: #2e2f33;
+  --c-base-text: #2f3033;
   --c-gray: rgba(53, 56, 59, 0.7);
   --c-border: rgba(73, 81, 85, 0.4);
   --font-family-base: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
