fix: font style

--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -4,14 +4,14 @@
       --c-base-background: #1c1c1f;
       --c-base-background-lighter: #292c34;
       --c-base-text: #fff;
-      --c-gray: rgba(214, 226, 243, 0.7);
+      --c-gray: rgb(204, 202, 202);
       --c-border: rgba(115, 125, 130, 0.4);
     }
   }
   --c-base-background: #fff;
   --c-base-background-lighter: #bfc1ca;
-  --c-base-text: #2f3033;
-  --c-gray: rgba(53, 56, 59, 0.7);
+  --c-base-text: #17181a;
+  --c-gray: rgba(29, 31, 32, 0.7);
   --c-border: rgba(73, 81, 85, 0.4);
   --font-family-base: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
     'Hiragino Sans', Meiryo, sans-serif;
